[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -172.0
margin_top = 40.0
margin_right = 171.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="GameOverLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -113.0
margin_bottom = -35.0
custom_fonts/font = SubResource( 6 )
text = "Game over!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreCaption" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -6.0
margin_right = 3.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 7 )
text = "High score"
align = 1

[node name="HighScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 35.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -150.0
margin_right = 149.0
margin_bottom = -83.0
custom_fonts/font = SubResource( 5 )
text = "Restart"

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
